# xgboost-template

./: .gitignore  README.md  pyproject.toml  train_classifier.py
src/xgboost_template/: __init__.py  utils.py
src/xgboost_template/classification/: __init__.py  experiment_logger.py  optimized_classifier.py  plots.py  schema.py
